--- a/style.css
+++ b/style.css
@@ -112,6 +112,12 @@ section h2 {
 .cert-card:hover {
     transform: scale(1.06);
 }
+.cert-card img {
+    width: 100%;              /* image fills card */
+    height: auto;
+    border-radius: 10px;
+    border: 2px solid #00eaff;
+}
 
 /* SKILLS */
 .skill-grid {
@@ -163,6 +169,7 @@ footer {
     background: #111;
     color: #999;
 }
+
 
 
 
