--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ section h2 {
     width: 100%;              /* image fills card */
     height: auto;
     border-radius: 10px;
-    border: 2px solid #00eaff;
+    border: none;
 }
 
 /* SKILLS */
@@ -169,6 +169,7 @@ footer {
     background: #111;
     color: #999;
 }
+
 
 
 
