--- a/style.css
+++ b/style.css
@@ -55,6 +55,22 @@ nav {
 .btn:hover, .resume-btn:hover {
     background: #00bcd4;
 }
+/*Linkedln button */
+.linkedin-btn {
+    background: #0A66C2;
+    color: white;
+    padding: 10px 18px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-weight: 600;
+    transition: 0.3s;
+    margin-left: 15px;
+}
+
+.linkedin-btn:hover {
+    background: #004182;
+}
+
 
 /* HOME SECTION */
 /* HOME SECTION */
@@ -220,6 +236,7 @@ footer {
     background: #111;
     color: #999;
 }
+
 
 
 
