--- a/style.css
+++ b/style.css
@@ -151,6 +151,26 @@ section h2 {
     border-radius: 10px;
     border: none;
 }
+.cred-btn {
+    display: inline-block;
+    margin-top: 10px;
+    padding: 10px 18px;
+    background: #0A66C2;    /* LinkedIn Blue */
+    color: white;
+    font-size: 14px;
+    font-weight: 600;
+    border-radius: 8px;
+    text-decoration: none;
+    transition: 0.3s ease;
+}
+
+/* Hover Effect */
+.cred-btn:hover {
+    background: #004b96;
+    box-shadow: 0 0 10px rgba(10, 102, 194, 0.6);
+    transform: translateY(-3px);
+}
+
 
 /* SKILLS */
 /* Skills Section */
@@ -289,6 +309,7 @@ section h2 {
         transform: translateY(0);
     }
 }
+
 
 
 
