--- a/style.css
+++ b/style.css
@@ -119,6 +119,31 @@ section h2 {
 }
 
 /* ABOUT */
+.about-box {
+    background: #111;
+    padding: 40px;
+    border-radius: 15px;
+    max-width: 850px;
+    width: 100%;
+    border: 1px solid #333;
+    box-shadow: 0 0 15px rgba(255,255,255,0.1);
+
+    /* Animation */
+    opacity: 0;
+    animation: fadeInUp 1.2s ease forwards;
+}
+/* Fade-in Animation */
+@keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 /* CERTIFICATIONS SECTION */
 .certifications {
     padding: 60px 20px;
@@ -328,6 +353,7 @@ section h2 {
         transform: translateY(0);
     }
 }
+
 
 
 
